--- a/css/detailPage.css
+++ b/css/detailPage.css
@@ -51,6 +51,7 @@ ul{
 #info{
 	width:460px;
 	margin-left:40px;
+	position:relative;
 }
 #info h1{
 	width:460px;
@@ -108,6 +109,12 @@ ul{
 	display:flex;
 	border-bottom:1px solid #999;
 }
+#city ul li{
+	width:120px;
+	height:24px;
+	line-height:24px;
+	float:left;
+}
 #peisong #sjx{
 	display:inline-block;
 	height:18px;
@@ -120,13 +127,16 @@ ul{
 	display:block;
 	width:0;
 	height:0;
-
 	border:5px solid transparent;
 	border-top-color:black;
 	margin-top:5px;
-	/*position: absolute;
-	left: 0px;
-	top: 0px;*/
+}
+#city{
+	width:360px;
+	height:284px;
+	border:#e2e2e2 solid 1px;
+	position:absolute;
+
 }
 #col{
 	margin-top:25px;
@@ -316,7 +326,6 @@ ul{
 #xq{
 	width:1200px;
 	height:500px;
-	background:pink;
 	margin:50px auto 0;
 }
 #xqL{
@@ -326,8 +335,6 @@ ul{
 	width:982px;
 	height:52px;
 	background:#fafafa;
-	/*background:green;*/
-	/*border:1px solid #ebebeb;*/
 	display:flex;
 }
 #slide a{
@@ -345,6 +352,7 @@ ul{
 }
 #slide #last{
 	border-right:0;
+	
 }
 #slide a:hover{
 	color:#ff464e;
@@ -353,10 +361,20 @@ ul{
 	color:#ff464e;
 	border-bottom:2px solid rgb(255,70,78);
 }
-/*#phonema{
-	width:11px;
-	height:11px;
-	/*display:inline-block;*/
-	/*margin-left:4px;
-	background:url(../image/roumeiimg/code_1.png) no-repeat;*/
-/*}*/
+#show{
+	position:absolute;
+	width:50px;
+	height:50px;
+	border:1px solid #999;
+	left:10px;
+	top:20px;
+}
+#xqL p{
+	font-size:18px;
+	color:#666;
+	margin-top:20px;
+	margin-left:100px;
+}
+#xqL img{
+	margin-left:200px;
+}
