--- a/css/detailPage.css
+++ b/css/detailPage.css
@@ -51,13 +51,11 @@ ul{
 #info{
 	width:460px;
 	margin-left:40px;
-	position:relative;
 }
 #info h1{
 	width:460px;
 	color:#333;
 	font-size:18px;
-	
 }
 #money{
 	width:460px;
@@ -110,10 +108,19 @@ ul{
 	border-bottom:1px solid #999;
 }
 #city ul li{
-	width:120px;
-	height:24px;
+	width:118px;
+	height:16px;
 	line-height:24px;
 	float:left;
+	text-align:center;
+	border:none;
+}
+#city ul li a{
+	color:#0289cd;
+	font-size:12px;
+}
+#city ul li a:hover{
+	text-decoration:underline;
 }
 #peisong #sjx{
 	display:inline-block;
@@ -131,12 +138,19 @@ ul{
 	border-top-color:black;
 	margin-top:5px;
 }
+#city ul{
+	width:360px;
+	position:relative;
+}
 #city{
 	width:360px;
 	height:284px;
 	border:#e2e2e2 solid 1px;
 	position:absolute;
-
+	display:none;
+    margin-left:36px;
+    background:#fff;
+    margin-top:-19px;
 }
 #col{
 	margin-top:25px;
@@ -186,7 +200,6 @@ ul{
 	margin-left:20px;
 }
 #numb{
-	
 	display:flex;
 	margin-top:15px;
 }
@@ -264,7 +277,6 @@ ul{
 	font-size:12px;
 	color:#999;
 	margin-top:7px;
-
 }
 #con li img{
 	width:14px;
@@ -307,7 +319,6 @@ ul{
 	width:21px;
 	height:17px;
 	margin-right:5px;
-	
 }
 #shoucang a:hover{
 	color:#ff464e;
@@ -325,11 +336,12 @@ ul{
 }
 #xq{
 	width:1200px;
-	height:500px;
+/*	height:500px;*/
 	margin:50px auto 0;
 }
 #xqL{
 	width:980px;
+
 }
 #slide{
 	width:982px;
@@ -352,7 +364,6 @@ ul{
 }
 #slide #last{
 	border-right:0;
-	
 }
 #slide a:hover{
 	color:#ff464e;
@@ -369,12 +380,592 @@ ul{
 	left:10px;
 	top:20px;
 }
+
 #xqL p{
 	font-size:18px;
 	color:#666;
 	margin-top:20px;
 	margin-left:100px;
 }
+#xqL .info{
+	font-size:12px;
+	color:#333;
+	line-height:2px;
+}
+#show3{
+	margin-bottom:10px;
+}
+#show3 img{
+	width:815px;
+	height:80px;
+	margin-left:200px;
+	margin-top:10px;
+}
+#cp01 ul li{
+	width:110px;
+	height:94px;
+}
 #xqL img{
 	margin-left:200px;
+}
+#img3{
+	width:790px;
+}
+#img3 img:nth-child(1){
+	height:595px;
+}
+#img3 img:nth-child(2){
+	height:923px;
+}
+#img3 img:nth-child(3){
+	height:923px;
+}
+#img3 img:nth-child(4){
+	height:1024px;
+}
+#img3 img:nth-child(5){
+	height:1195px;
+}
+#img3 img:nth-child(6){
+	height:1040px;
+}
+#img3 img:nth-child(7){
+	width:790px;
+	height:1040px;
+}
+#img3 img:nth-child(8){
+	width:790px;
+	height:604px;
+}
+#img3 img:nth-child(9){
+	width:790px;
+	height:1004px;
+}
+#img3 img:nth-child(10){
+	width:790px;
+	height:865px;
+}
+/*alertBox*/
+#alertBox{
+	width:542px;
+	height:500px;
+	position:fixed;
+	left:50%;
+	top:50%;
+	margin-left:-271px;
+	margin-top:-250px;
+	background:#fff;
+	border:1px solid #ccc;
+	display:none;
+}
+#alertTop{
+	width:542px;
+	height:49px;
+	border-bottom:1px solid #E2E2E2;
+	background:#f9f9f9;
+}
+#alertTop span{
+	display:block;
+	width:59px;
+	height:38px;
+	margin-left:10px;
+	background:url(../image/roumeiimg/juanpi-logo.gif) no-repeat right bottom;
+}
+#alertTop #is{
+	display:block;
+	width:24px;
+	height:24px;
+	background:url(../image/roumeiimg/total_alert.gif) no-repeat -173px -722px;
+	margin-top:10px;
+	margin-right:10px;
+}
+#alertTop{
+	display:flex;
+	justify-content: space-between;
+}
+/*form*/
+/*forms*/
+#forms{
+	width:542px;
+	height:453px;
+	background:white;
+	margin:20px auto 0;
+    border:1px solid #e2e2e2;
+}
+#title{
+	width:978px;
+	height:65px;
+	margin:0 auto;
+	display:flex;
+	justify-content: space-between;
+	border-bottom:1px solid #e2e2e2 ;
+}
+#center{
+	width:818px;
+	height:445px;
+	margin:0 auto;
+	display: flex;
+	padding:30px 80px 0;
+}
+#titleL span:first-child{
+	display:block;
+	width:100px;
+	height:24px;
+	margin-top:20px;
+	margin-right:10px;
+	font-size:16px;
+	color:#ff464e;
+	margin-left:50px;
+	background:url(../image/hd-bg.gif) no-repeat center right;
+
+}
+#titleL span:last-child{
+	font-size:12px;
+	color:#666;
+	line-height:65px;
+}
+#titleL{
+	display: flex;
+}
+#titleR span{
+	font-size:14px;
+	color:#999;
+	line-height:65px;
+}
+#titleR a{
+	font-size:14px;
+	color:#0289cd;
+	line-height:65px;
+}
+#titleR{
+	margin-right:50px;
+}
+ul li{
+	width:450px;
+	height:70px;
+	background:white;
+}
+/*#center{
+	margin-top:30px;
+}*/
+label{
+	width:80px;
+	height:20px;
+	text-align:right;
+	font-size:14px;
+	margin-top:10px;
+	color:#666;
+}
+#phone{
+	display:flex;
+}
+#phone input,#password input,#password2 input{
+	width:260px;
+	height:38px;
+	border:1px solid #ff464e;
+}
+#checkPhone{
+	width:330px;
+	height:16px;
+	color:#666;
+	font-size: 12px;
+	text-indent: 88px;
+}
+#error{
+	color:#666;
+	font-size: 12px;
+}
+#error a{
+	color:blue;
+	font-size: 12px;
+}
+#msg{
+	margin-top:8px;
+}
+ul{
+	width:450px;
+	height:420px;
+}
+ul li{
+	width:450px;
+	height: 70px;
+	/*background:skyblue;*/
+	color:#666;
+	font-size:14px;
+
+}
+
+li p{
+	color:#666;
+	font-size:12px;
+	text-indent:82px;
+}
+#sp1{
+	color:#666;
+	font-size:12px;
+	margin-left:15px;
+}
+#sub{
+	width:260px;
+	height:40px;
+	background:#ff4251;
+	border:0;
+	border-radius:5px;
+	margin-left:80px;
+	color:white;
+	font-size:16px;
+}
+#xieyi{
+	font-size:12px;
+	color:#666;
+}
+#check{
+	vertical-align: middle;
+	margin-left:20px;
+}
+#tu img{
+	display:block;
+	width:349px;
+	height:247px;
+	margin-left:-67px;
+}
+#tu{
+	margin-left:80px;
+}
+#doubleLine{
+	width:290px;
+	margin:20px 0 15px;
+	border-bottom:3px double #e2e2e2;
+}
+#tu p{
+	color:#333;
+	font-size:12px;
+	text-indent:10px;
+}
+#icon{
+	width:290px;
+	height:22px;
+	display:flex;
+	margin-left:12px;
+	
+}
+#icon a{
+	background: url(../image/new-login.gif) no-repeat left top;
+	display:block;
+	width:22px;
+	height:22px;
+	margin-right:7px;
+	margin-top:7px;
+}
+#icon #a1{
+	background-position:-236px -194px;
+}
+#icon #a2{
+	background-position:-27px -169px;
+}
+#icon #a3{
+	background-position:-27px -140px;
+}
+#p3{
+	display:none;
+}
+strong{
+	background:url(../image/login.gif) no-repeat left top;
+	width:16px;
+	height:16px;
+	display:none;
+	margin-right:3px;
+	margin-left:-14px;
+	vertical-align: middle;
+}
+#str1, #str2{
+	margin-left:4px;
+}
+#str3{
+	margin-left:9px;
+}
+#mi{
+	width:280px;
+	margin:10px 0 0 80px;
+	display:flex;
+	margin-bottom:7px;
+	display:none;
+}
+
+#mi span{
+	display:inline;
+	width:50px;
+	height:14px;
+	line-height:14px;
+	margin-right:10px;
+	text-indent:10px;
+}
+/*#inp1{
+	background: url(../image/name2.jpg) no-repeat;
+}*/
+#username{
+	width:269px;
+	height:40px;
+	background:yellow;
+	background: url(../image/name2.jpg) no-repeat;
+	border:1px solid #666;
+	display:flex;
+}
+#imgs{
+	width:39px;
+	height:40px;
+}
+#error{
+	display:none;
+	margin-top:14px;
+	margin-right:10px;
+	width:13px;
+	height:13px;
+	background:url(../image/de_info.gif) no-repeat;
+	cursor:pointer;
+}
+
+#pass{
+	width:269px;
+	height:40px;
+	background:yellow;
+	background: url(../image/code2.jpg) no-repeat;
+	border:1px solid #666;
+	display:flex;
+}
+#imgs2{
+	width:39px;
+	height:40px;
+}
+#username,#pass{
+	margin-left:80px;
+}
+ul li:nth-child(3){
+	width:450px;
+	height:28px;
+	display:flex;
+}
+#lef{
+	display:flex;
+}
+#check{
+	margin-left:78px;
+	margin-top:10px;
+}
+#lef p{
+	margin-top:7px;
+	margin-left:-74px;
+}
+#aa{
+	font-size:12px;
+	color:#999;
+	margin-top:7px;
+	margin-left:120px;
+}
+ul li:nth-child(4){
+	padding-top:10px;
+}
+#hezuo p{
+	color:#333;
+	font-size:12px;
+	text-indent:10px;
+}
+#icon{
+	width:290px;
+	height:22px;
+	display:flex;
+	margin-left:12px;
+	
+}
+#icon a{
+	background: url(../image/new-login.gif) no-repeat left top;
+	display:block;
+	width:22px;
+	height:22px;
+	margin-right:7px;
+	margin-top:7px;
+}
+#icon #a1{
+	background-position:-236px -194px;
+}
+#icon #a2{
+	background-position:-27px -169px;
+}
+#icon #a3{
+	background-position:-27px -140px;
+}
+#hezuo{
+	width:120px;
+	height:50px;
+	margin-left:75px;
+}
+ul li:nth-child(5){
+	display:flex;
+}
+#iconPhone{
+	width:12px;
+	height:22px;
+	background:url(../image/icons-total.gif) no-repeat;
+	background-position: right -249px;
+	margin-left:30px;
+	margin-top:14px;
+	margin-right:4px;
+}
+#bb{
+	font-size:14px;
+	color:#666;
+	margin-top:16px;
+}
+#count{
+	font-size:16px;
+	color:#666;
+	text-align:center;
+	padding-top:18px;
+	
+}
+/*show2*/
+
+#show2 table{
+	width:600px;
+	height:160px;
+	border-spacing: 0;
+	border-collapse: collapse;
+	margin-left:200px;
+}
+#show2 table,th,td{
+	border:1px solid #e2e2e2;
+	
+	
+}
+table td{
+	text-align:center;
+	cellspacing:0;
+}
+/*底部*/
+/*line*/
+#line{
+	border:4px solid #ff464e;
+
+}
+#footerMain{
+	width:100%;
+	background:#f9f9f9;
+}
+#footT{
+	height:144px;
+	margin:0 auto;
+	display:flex;
+	padding-top:30px;
+	/*margin-left:50px;*/
+}
+#footer{
+	width:1200px;
+	height:202px;
+
+	margin:0 auto;
+}
+#ma2 img{
+	display:block;
+	width:90px;
+	height:90px;
+	margin-top:5px;
+}
+#ma2 p{
+	font-size:14px;
+	color:#666666;
+	margin-top:15px;
+}
+#update{
+	
+	margin:0 50px;
+}
+#update dt{
+	font-size:14px;
+	color:#333;
+	font-weight:bold;
+	margin-bottom:10px;
+	padding-left:7px;
+}
+#update dd a{
+	margin-bottom:5px;
+	color:#666;
+	font-size:12px;
+}
+#update dd i{
+	width:4px;
+	height:4px;
+	border-radius: 50%;
+	background:#c6c6c6;
+	display:inline-block;
+	margin-right:5px;
+	float:left;
+	margin-top:8px;
+}
+#update dd a:hover{
+	text-decoration:underline;
+}
+#cont{
+	display:flex;
+}
+
+#date{
+	background:url(../image/service_add.gif) no-repeat;
+	background-position:0 -6px;
+}
+#date p{
+	font-size:12px;
+	color:#9e9191;
+	text-indent:95px;
+
+}
+#phone2{
+	font-size:12px;
+	color:#9e9191;
+	margin-top:30px;
+}
+#footer{
+	border-bottom: 1px dotted #cccccc;
+}
+#footX{
+	width:1200px;
+	font-size:12px;
+	color:#c6cfdc;
+	margin:0 auto;
+}
+#footX p{
+	text-align:center;
+	line-height:20px;
+	
+}
+#footX .p1{
+	margin-top:18px;
+}
+#imgsB{
+	text-align:center;
+	margin-top:15px;
+}
+#imgsB img{
+	margin-right:31px;
+}
+#footD{
+	display:flex;
+}
+#scroll #uls2 {
+	display:flex;
+}
+#scroll #uls2 li a{
+	display:block;
+	width:90px;
+	font-size:12px;
+	color:#666;
+	line-height:28px;
+}
+#footD span{
+	font-size:12px;
+	color:#666;
+	line-height:28px;
+	
+}
+#uls2 a:first-child{
+	text-indent:15px;
 }
